src/resources/sass/stylesheet.scss
body {
  font-size: 16px;
}

/* Code blocks in markdown */
code {
  padding: 15px 20px !important;
  width: 100%;
  display: block;
}

pre {
  border-radius: 6px;
}

img {
  max-width: 100%;
  height: auto;
}

a {
  text-decoration: none;
}

.btn {
  color: #fff;
}

.btn:hover {
  color: #fff;
}

.container {
  width: 55%;
}

@media only screen and (max-width: 768px) {
  .container {
    width: 100%;
  }
}

.banner-image-container {
  max-height: 400px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 10px;
  border-radius: 10px;
  overflow: hidden;
  // Next two lines are a fix for Safari's GPU/CPU border-radius glitch with hidden overflow.
  // (https://stackoverflow.com/questions/10314207/webkit-not-respecting-overflowhidden-with-border-radius)
  transform: translateZ(0);
}

.banner-image {
  max-width: 100%;
  // Animation
  transition: transform 0.5s;
}

.post-content {
  width: 45%;
}

@media only screen and (max-width: 992px) {
  .post-content {
    width: 75%;
  }
}

@media only screen and (max-width: 1200px) {
  .post-content {
    width: 100%;
  }
}

/* For posts page (feed) */
.post-container-content-feed {
  padding: 10px 25px;
}

.post-container-feed {
  margin: 20px 0;

  a {
    color: #000;
    text-decoration: none;
  }

  #arrow {
    opacity: 0;
    transition: opacity 0.3s ease-in;
  }

  transition: box-shadow 0.4s ease-in-out;
  border-radius: 10px;
}

.post-container-feed:hover {
  img {
    transform: scale(1.3);
  }

  a {
    text-decoration: none;
  }

  #arrow {
    opacity: 1;
    transition: opacity 0.4s ease-in;
  }

  cursor: pointer;
  box-shadow: 2px 2px 10px #888;
  transition: box-shadow 0.4s ease-in-out;
}

@media only screen and (max-width: 768px) {
  .post-container-feed {
    margin: 10px 0;

    img {
      transform: scale(1.8);
    }
  }

  .banner-image-container {
    img {
      transform: scale(1.8);
    }
  }

  .post-container-feed:hover {
    img {
      transform: scale(2.2) !important;
    }
  }
}

.form-control {
  margin-bottom: 10px;
}

label {
  font-weight: bold;
  margin: 5px 0 0;
  display: block;
}

.post-title {
  margin-top: 20px;
}

.post-meta {
  i {
    padding-right: 3px;
  }

  i:not(:first-child) {
    padding-left: 10px;
  }
}

.pagination-wrapper {
  margin: 30px 0 40px;
}

.avatar {
  max-width: 100%;
  display: block;
  margin: 5px 0 10px;
}

.avatar-small {
  max-width: 32px;
}

.section-space {
  margin-top: 50px;
}

.avatar-upload-criteria {
  margin-bottom: 20px;
  display: block;
}

.image-row-container {
  padding: 20px 5px 10px;
}

.image-preview {
  max-height: 200px;
  margin: 20px;
}

.navbar .navbar-toggler {
  border-color: transparent;
}

.navbar .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

.navbar .navbar-toggler:focus {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

.inline-block {
  display: inline-block;
}

.padding-0 {
  padding: 0;
}

.display-none {
  display: none;
}

.bottom-margin-30 {
  margin-bottom: 30px;
}

.flex-center-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

